--- a/src/app/components/advertise/new-ad/new-ad-step-photo/new-ad-step-photo.scss
+++ b/src/app/components/advertise/new-ad/new-ad-step-photo/new-ad-step-photo.scss
@@ -40,8 +40,8 @@
 
         .removePhoto {
             position: inherit;
-            top: 0;
-            right: 0;
+            top: -10px;
+            right: -10px;
         }
     }
 }
@@ -143,7 +143,7 @@
                 height: 4vh;
 
                 ion-icon {
-                    font-size: 3vh;
+                    font-size: 4vh;
                 }
             }
         }
@@ -201,7 +201,7 @@ ion-fab-button.button-remove-big {
     --height: 40px;
 
     ion-icon {
-        font-size: 3vh;
+        font-size: 4vh;
     }
 }
 
@@ -211,14 +211,14 @@ ion-fab-button.button-remove-small {
     --height: 28px;
 
     ion-icon {
-        font-size: 2.4vh;
+        font-size: 3.4vh;
     }
 }
 
 ion-fab-button.button-add-big {
-    --height: 12vh;
-    --width: 12vh;
-    --size: 12vh;
+    --height: 10vh;
+    --width: 10vh;
+    --size: 120vh;
 
     ion-icon {
         font-size: 8vh;
