--- a/src/app/pages/advertise/ads/ads-details/ads-details.page.html
+++ b/src/app/pages/advertise/ads/ads-details/ads-details.page.html
@@ -25,7 +25,7 @@
 
   <app-content-advertise-notification [displayOnInit]="false"></app-content-advertise-notification>
 
-  <app-item-details-header [item]="item" *ngIf="item != null" [displayItemExpire]="true" [adDisplay]="true"></app-item-details-header>
+  <app-item-details-header [item]="item" *ngIf="item != null" [displayItemExpire]="true" [adDisplay]="true" [displayFullAddress]="true"></app-item-details-header>
 
   <app-item-details-content [item]="item" [isAdDisplay]="true" [displaySensitive]="false" [noAppointmentAction]="true" [displayChat]="true" *ngIf="item != null" (selectedCategory)="categoryChange($event)"></app-item-details-content>
 
