lib: update Ionic v4-beta.15

--- a/src/app/components/core/big-button/big-button.component.scss
+++ b/src/app/components/core/big-button/big-button.component.scss
@@ -53,6 +53,7 @@ button.big-button, button.medium-button, button.small-button {
       margin: 0;
       overflow: inherit;
       font-weight: $font-weight-light;
+      display: block;
     }
   }
 
