--- a/src/app/components/items/item-details/item-details-content/item-details-content.html
+++ b/src/app/components/items/item-details/item-details-content/item-details-content.html
@@ -79,7 +79,7 @@
         </ion-col>
     </ion-row>
 
-    <ion-row padding-top>
+    <ion-row padding-top padding-bottom>
         <ion-col size="6">
             <div [class.attributeSelected]="item.attributes.disabledFriendly" [class.attributeNotSelected]="!item.attributes.disabledFriendly">
                 <ion-icon name="checkmark" *ngIf="item.attributes.disabledFriendly"></ion-icon>
