--- a/src/app/modals/core/yelp-business-details/yelp-business-details.html
+++ b/src/app/modals/core/yelp-business-details/yelp-business-details.html
@@ -22,8 +22,8 @@
         </ion-slide>
     </ion-slides>
 
-    <ion-card text-center text-wrap *ngIf="yelpBusiness != null" id="yelp-details" no-shadow>
-        <ion-card-header text-center>
+    <ion-card text-wrap *ngIf="yelpBusiness != null" id="yelp-details" no-shadow>
+        <ion-card-header>
             <h1>{{yelpBusiness.name}}</h1>
         </ion-card-header>
 
@@ -34,7 +34,7 @@
                 </ion-badge>
             </p>
 
-            <div padding text-left id="yelp-address">
+            <div padding-bottom padding-top id="yelp-address">
                 <div>
                     <ion-label no-margin>{{yelpBusiness.location.address1}}</ion-label>
                     <ion-label no-margin>{{yelpBusiness.location.address2}}</ion-label>
@@ -49,7 +49,7 @@
             </div>
 
             <div padding-top id="yelp-evaluation">
-                <ion-label class="label-title small-label">{{'YELP_DETAILS.EVALUATION' | translate}}</ion-label>
+                <ion-label padding-bottom class="label-title small-label">{{'YELP_DETAILS.EVALUATION' | translate}}</ion-label>
 
                 <span padding-end>
                     <ion-icon name="star-outline" *ngIf="yelpBusiness.rating == 0"></ion-icon>
@@ -78,12 +78,12 @@
         </ion-card-content>
     </ion-card>
 
-    <div padding-start padding-end padding-bottom text-center id="yelp-map-section">
-        <ion-label class="label-title small-label">{{'YELP_DETAILS.NEIGHBORHOOD' | translate}}</ion-label>
+    <div padding-start padding-end padding-bottom id="yelp-map-section">
+        <ion-label class="label-title small-label" padding-bottom>{{'YELP_DETAILS.NEIGHBORHOOD' | translate}}</ion-label>
 
         <app-google-map-yelp [item]="item" [yelpBusinesses]="yelpMarkers"></app-google-map-yelp>
 
-        <ion-label class="small-label" *ngIf="yelpBusiness != null" id="yelp-distance">
+        <ion-label class="small-label" *ngIf="yelpBusiness != null" id="yelp-distance" padding text-center>
             <ion-icon slot="start" name="pin"></ion-icon>
             {{yelpBusiness.distance | trimDistance}}{{'CORE.METER' | translate}}
         </ion-label>
