feat: toast color

--- a/src/theme/toast.scss
+++ b/src/theme/toast.scss
@@ -1,14 +1,5 @@
 .fluster-toast {
   text-align: center;
-
-  div.toast-wrapper {
-    background: transparent;
-
-    div.toast-message {
-      border: 1px solid $fluster-peach3;
-      border-radius: 4px;
-      background: white;
-      color: $fluster-peach3;
-    }
-  }
+  --background: #{$fluster-peach1};
+  --color: white;
 }
