--- a/src/app/pages/browse/item-params/item-params.page.html
+++ b/src/app/pages/browse/item-params/item-params.page.html
@@ -134,26 +134,18 @@
 <ion-footer role="browse">
   <ion-toolbar *ngIf="category != null" no-padding>
     <ion-segment [(ngModel)]="category">
-      <ion-segment-button value="location">
+      <ion-segment-button value="location" layout="icon-start">
         <ion-icon name="pin"></ion-icon>
-        <span>{{'ITEM_PARAMS.LOCATION.TITLE' | translate}}</span>
+        <ion-label>{{'ITEM_PARAMS.LOCATION.TITLE' | translate}}</ion-label>
       </ion-segment-button>
-      <ion-segment-button value="interests">
+      <ion-segment-button value="interests" layout="icon-start">
         <ion-icon name="timer"></ion-icon>
-        <span>{{'ITEM_PARAMS.INTERESTS.TITLE' | translate}}</span>
+        <ion-label>{{'ITEM_PARAMS.INTERESTS.TITLE' | translate}}</ion-label>
       </ion-segment-button>
-      <ion-segment-button value="price">
+      <ion-segment-button value="price" layout="icon-start">
         <ion-icon name="cash"></ion-icon>
-        <span>{{'ITEM_PARAMS.PRICE.TITLE' | translate}}</span>
+        <ion-label>{{'ITEM_PARAMS.PRICE.TITLE' | translate}}</ion-label>
       </ion-segment-button>
-      <!--ion-segment-button value="availability">
-          <ion-icon name="calendar"></ion-icon>
-          <span>{{'ITEM_PARAMS.AVAILABILITY.TITLE' | translate}}</span>
-      </ion-segment-button
-      <ion-segment-button value="type">
-          <ion-icon name="albums"></ion-icon>
-          <span>{{'ITEM_PARAMS.TYPE.TITLE_SEGMENT' | translate}}</span>
-      </ion-segment-button-->
     </ion-segment>
   </ion-toolbar>
 </ion-footer>
