feat(#54): extend feature has been move to a separate mask

--- a/src/app/pages/advertise/admin/admin-appointments/admin-appointments.page.html
+++ b/src/app/pages/advertise/admin/admin-appointments/admin-appointments.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-button (click)="backToPreviousSlide()" class="custom-back-button">
+      <ion-button (click)="customBack()" class="custom-back-button">
         <ion-icon name="arrow-back"></ion-icon>
       </ion-button>
     </ion-buttons>
@@ -12,71 +12,21 @@
 
 <ion-content role="ad" [scrollY]="false">
 
-  <div ion-fixed *ngIf="loaded">
+  <div ion-fixed *ngIf="loaded && item != null" id="adminAppointmentsCalendar">
+    <div class="big-screen-content admin-calendar-container" *ngIf="loaded">
+      <h1 padding-start padding-end text-center class="padding-top-very-small">{{'ADMIN_APPOINTMENTS.APPOINTMENTS.TITLE' | translate}}</h1>
 
-    <ion-slides #adsAdminAppointmentsSlider pager="false" [options]="slideOptsOnlyExternal">
-      <ion-slide *ngIf="itemEndCouldBeExtended && item != null">
-        <div padding class="flex-content big-screen-content">
+      <h2 padding-start padding-end text-center>{{'ADMIN_APPOINTMENTS.APPOINTMENTS.SUB_TITLE' | translate}}</h2>
 
-          <ion-grid class="flex-grid">
-            <ion-row>
-              <ion-col col-12 text-center>
-                <h1>{{'ADMIN_APPOINTMENTS.EXTEND.TITLE' | translate}}</h1>
+      <app-pick-ads-appointments [adminScheduledDates]="adminScheduledDates"  (notifiySelected)="select($event)"></app-pick-ads-appointments>
 
-                <p *ngIf="!itemEndThePast">{{ 'ADMIN_APPOINTMENTS.EXTEND.EXPIRE_SOON' | translate:{when: extendDateDisplay} }}</p>
-                <p *ngIf="itemEndThePast">{{ 'ADMIN_APPOINTMENTS.EXTEND.EXPIRED' | translate:{when: extendDateDisplay} }}</p>
-              </ion-col>
-            </ion-row>
-
-            <ion-row>
-              <ion-col col-12>
-                <ion-list padding-top id="extendItemList">
-                  <ion-radio-group [(ngModel)]="extendItem">
-                    <ion-item>
-                      <ion-label>{{'CORE.YES' | translate}}</ion-label>
-                      <ion-radio checked="true" value="true"></ion-radio>
-                    </ion-item>
-
-                    <ion-item>
-                      <ion-label>{{'CORE.NO' | translate}}</ion-label>
-                      <ion-radio value="false"></ion-radio>
-                    </ion-item>
-                  </ion-radio-group>
-                </ion-list>
-              </ion-col>
-            </ion-row>
-
-            <ion-row class="flex-end buttons-full-length">
-              <ion-col col-12>
-                <ion-button expand="full" shape="round" (click)="next()">
-                  {{'CORE.NEXT' | translate}}
-                  <ion-icon slot="end" name="arrow-forward"></ion-icon>
-                </ion-button>
-              </ion-col>
-            </ion-row>
-          </ion-grid>
-        </div>
-      </ion-slide>
-
-      <ion-slide id="adminAppointmentsCalendar" *ngIf="item != null">
-        <div class="big-screen-content admin-calendar-container">
-          <h1 padding-start padding-end text-center class="padding-top-very-small">{{'ADMIN_APPOINTMENTS.APPOINTMENTS.TITLE' | translate}}</h1>
-
-          <h2 padding-start padding-end text-center>{{'ADMIN_APPOINTMENTS.APPOINTMENTS.SUB_TITLE' | translate}}</h2>
-
-          <app-pick-ads-appointments [adminScheduledDates]="adminScheduledDates"  (notifiySelected)="select($event)"></app-pick-ads-appointments>
-
-          <div text-center padding class="date-picker-actions">
-            <ion-button expand="full" shape="round" (click)="extendItemAndUpdateAppointment()">
-              {{'ADMIN_APPOINTMENTS.APPOINTMENTS.CONFIRM' | translate}}
-              <ion-icon slot="end" name="checkmark"></ion-icon>
-            </ion-button>
-          </div>
-        </div>
-      </ion-slide>
-
-    </ion-slides>
-
+      <div text-center padding class="date-picker-actions">
+        <ion-button expand="full" shape="round" (click)="updateAppointment()">
+          {{'ADMIN_APPOINTMENTS.APPOINTMENTS.CONFIRM' | translate}}
+          <ion-icon slot="end" name="checkmark"></ion-icon>
+        </ion-button>
+      </div>
+    </div>
   </div>
 
   <div class="spinner-loading" padding text-center *ngIf="!loaded">
