fix(#55): improve scrolling performances on date picker

--- a/src/theme/scroll.scss
+++ b/src/theme/scroll.scss
@@ -2,6 +2,10 @@ div[scrollx=true], div[scrolly=true] {
   position: relative;
   overflow: hidden;
 
+  -webkit-overflow-scrolling: touch;
+  will-change: scroll-position;
+  overscroll-behavior: contain;
+
   ::-webkit-scrollbar {
     display: none;
   }
