--- a/src/app/modals/advertise/applicant-appointments/applicant-appointments.scss
+++ b/src/app/modals/advertise/applicant-appointments/applicant-appointments.scss
@@ -2,6 +2,11 @@
 @import "../../../../theme/mixins";
 @import "../../../../theme/fluster-variables";
 
+
+[ion-fixed] {
+    height: 100%;
+}
+
 ion-content h2[text-center] {
 
     font-size: $fluster-text-big;
