feat(#59): as previously, don't allow swipe back even on iOS

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -60,6 +60,6 @@
       </ion-content>
     </ion-menu>
 
-    <ion-router-outlet main></ion-router-outlet>
+    <ion-router-outlet main [swipeGesture]="false"></ion-router-outlet>
   </ion-split-pane>
 </ion-app>
