feat: transparent background on public profile item

--- a/src/app/components/user/public-user-profile/public-user-profile.scss
+++ b/src/app/components/user/public-user-profile/public-user-profile.scss
@@ -37,6 +37,7 @@
 
     ion-item {
         background-color: transparent;
+        --background: transparent;
         padding-left: 0;
 
         ion-label {
